force-app/main/default/objects/Mid_Year_Review__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <formula>IF( 
AND(Submitted__c = TRUE, PL_Approved__c = FALSE,  MD_Approved__c = FALSE), &quot;Pending PL Approval&quot;, 
IF(
AND(Submitted__c = TRUE, PL_Approved__c = TRUE,  MD_Approved__c = FALSE), &quot;Pending MD Approval&quot; ,
IF(
AND(Submitted__c = TRUE, PL_Approved__c = TRUE,  MD_Approved__c = TRUE), &quot;Approved&quot; , &quot;Draft&quot;)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>