force-app/main/default/objects/Mid_Year_Review__c/fields/Tenure_in_Position__c.field-meta.xml
<CustomField>
    <fullName>Tenure_in_Position__c</fullName>
    <label>Tenure in Position</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>