force-app/main/default/objects/Mid_Year_Review__c/fields/Utilization_Target__c.field-meta.xml
<CustomField>
    <fullName>Utilization_Target__c</fullName>
    <formula>IF(OR( CreatedById = &quot;005F0000002tQUW&quot;, CreatedById = &quot;005F0000004tFww&quot; , CreatedById = &quot;005F0000003FDtA&quot; ) , 0.5 , 
IF(OR(CreatedById = &quot;005F0000005PB1t&quot; , CreatedById = &quot;005F0000005Oqwy&quot; , CreatedById = &quot;005F0000003FE0t&quot;) , 0.75 , 
IF(Job_Title__c = &quot;Business Analyst&quot;, 0.00, 
IF(Job_Title__c = &quot;Associate Consultant&quot;, 0.8, 
IF(Job_Title__c = &quot;Associate Director&quot;, 0.8, 
IF(Job_Title__c = &quot;Director&quot; , 0.8 , 
IF(Job_Title__c = &quot;Senior Director&quot; , 0.8, 
IF(Job_Title__c = &quot;Vice President&quot; , 0.65, 0.65))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UTE Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>