force-app/main/default/objects/Mid_Year_Review__c/fields/Utilization_YTD__c.field-meta.xml
<CustomField>
    <fullName>Utilization_YTD__c</fullName>
    <inlineHelpText>For the period 11/01/2018 - 6/30/2019</inlineHelpText>
    <label>UTE Actual</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>