force-app/main/default/objects/Mid_Year_Review__c/fields/VP_Utilization_Rating__c.field-meta.xml
<CustomField>
    <fullName>VP_Utilization_Rating__c</fullName>
    <formula>IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.90), 5, 
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.75, Utilization_YTD__c  &lt;  0.90), 4,
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.65, Utilization_YTD__c  &lt;  0.75), 3,
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.55, Utilization_YTD__c  &lt;  0.65), 2,
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &lt;  0.55), 1, 0
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Utilization Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>