force-app/main/default/objects/Mid_Year_Review__c/fields/VP_Utilization_Rating_PDO__c.field-meta.xml
<CustomField>
    <fullName>VP_Utilization_Rating_PDO__c</fullName>
    <formula>IF(PDO_TEAM_MEMBER__c = FALSE, 0.00, 
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.75), 6, 
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.65, Utilization_YTD__c   &lt;  0.75), 5, 
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.55, Utilization_YTD__c   &lt;  0.65), 4,
IF(AND(Job_Title_Static__c = &quot;vice President&quot;,  Utilization_YTD__c  &gt;= 0.45, Utilization_YTD__c   &lt;  0.55), 3,
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.35, Utilization_YTD__c   &lt;  0.45), 2,
IF(AND(Job_Title_Static__c = &quot;Vice President&quot;,  Utilization_YTD__c  &gt;= 0.00, Utilization_YTD__c   &lt;  0.35), 1, 0
)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VP Utilization Rating - PDO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>