force-app/main/default/objects/Mid_Year_Review__c/recordTypes/G100C_PL.recordType-meta.xml
<RecordType>
    <fullName>G100C_PL</fullName>
    <active>true</active>
    <label>G100C PL</label>
</RecordType>