force-app/main/default/objects/Mid_Year_Review__c/validationRules/Rejection_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Rejection_Limit</fullName>
    <active>false</active>
    <description>Does not allow users to reject records.</description>
    <errorConditionFormula>Rejected__c = TRUE</errorConditionFormula>
    <errorMessage>Mid-Year records may not be rejected.</errorMessage>
</ValidationRule>