force-app/main/default/objects/Mid_Year_Review__c/listViews/My_Direct_Reports.listView-meta.xml
<ListView>
    <fullName>My_Direct_Reports</fullName>
    <columns>NAME</columns>
    <columns>Evaluation_year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Job_Title_Static__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Approver_Current_User__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Direct Reports</label>
    <sharedTo>
        <group>Performance_Management_PLs</group>
    </sharedTo>
</ListView>