force-app/main/default/objects/Mid_Year_Review__c/listViews/My_Mid_Year_Reviews.listView-meta.xml
<ListView>
    <fullName>My_Mid_Year_Reviews</fullName>
    <columns>NAME</columns>
    <columns>Evaluation_year__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Job_Title_Static__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Evaluation_year__c</field>
        <operation>equals</operation>
        <value>2019</value>
    </filters>
    <label>My Mid-Year Reviews</label>
</ListView>